--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-cryptography==2.3
-falcon==1.4.1
-jsonschema==2.6.0
-PyJWT==1.6.4
-pytest==3.6.3
+falcon==2.0.0
+jsonschema>=2.6.0
+PyJWT>=1.6.4
+pytest>=3.6.3
